--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: 'Smashing, the spiritual successor to Dashing'
-email: 'devs@smashing.com'
+email: 'dev@smashing.com'
 description: >
   Smashing, the spiritual successor to Dashing, is a Sinatra based framework
   that lets you build excellent dashboards. It looks especially great on TVs.
-baseurl: '/smashing.github.io'
-url: 'https://dvinciguerra.github.io/smashing.github.io'
+baseurl: ''
+url: 'https://smashing.github.io'
 twitter_username: dvinciguerra
 github_username: dvinciguerra
 markdown: kramdown
